# rust-server-v2

./: .env  Cargo.toml  README.md
database/: create_login_table.sql  insert_user.sql  query_user.sql
migrations/2022-06-07-211023_create_login/: down.sql  up.sql
pages/: login.html  signup.html
src/: http_parsing.rs  lib.rs  login_service.rs  login_table.rs  main.rs  models.rs  request_handling.rs  schema.rs
src/login_service/: login_table.rs  models.rs  sessions_table.rs  web_token.rs
