[package]
name = "login-project"
authors = ["Pedro Antonhyonhi Silva Costa <antonhyonhi@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
url = "2.2"
anyhow = "1.0"
regex = "1.5"