[package]
name = "rust_server_v2"
authors = ["Pedro Antonhyonhi Silva Costa <antonhyonhi@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
# tokio-postgres = "0.7"
dotenv = "0.15.0"
futures = "0.3"
anyhow = "1.0"
regex = "1.5"